--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,9 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.8.1"
+    "firebase-admin": "^12.1.0",
+    "firebase-functions": "^4.8.1",
+    "jose": "^5.2.4"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
